--- a/wp-content/themes/seo-main/assets/styleguide/style.css
+++ b/wp-content/themes/seo-main/assets/styleguide/style.css
@@ -1130,6 +1130,8 @@ Styleguide 4.1
     padding: 0 15px; }
     .c-accordion .answer p {
       margin-top: 0; }
+    .c-accordion .answer img {
+      margin: 35px 0; }
   .c-accordion .c-rte__accordion {
     font-size: initial;
     color: initial; }
@@ -1168,7 +1170,7 @@ Styleguide 4.1
         display: block;
         padding-top: 15px;
         padding-bottom: 15px;
-        padding: 15px; }
+        padding: 25px 15px; }
         .c-accordion li .toggle span:after {
           content: "";
           position: absolute;
@@ -1194,6 +1196,8 @@ Styleguide 4.1
     color: #050505;
     margin-right: 30px;
     cursor: pointer; }
+    .c-accordion__filter li:hover {
+      color: #eb0029; }
     .c-accordion__filter li.active-selection {
       font-weight: 100;
       color: #820d1b; }
